# pixel-agents-terminal

./: CLAUDE.md  Cargo.toml  README.md
src/: agent.rs  grid.rs  main.rs  renderer.rs  scene.rs  sprites.rs  transcript.rs  ui.rs  watcher.rs
