[package]
name = "pixel-agents-terminal"
version = "0.1.0"
edition = "2021"
description = "Animated pixel-art characters in Ghostty reflecting Claude Code agent state"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = { version = "7", features = ["macos_kqueue"] }
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
